k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: valhalla
  labels:
    name: valhalla
    istio-injection: disabled
