k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valhalla-api
  namespace: valhalla
  labels:
    app: valhalla-api
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  selector:
    app: valhalla-api
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
